versioned_docs/version-4.1.x/reference/functions/Get-ADTRegistryKey.mdx
---
id: Get-ADTRegistryKey
title: Get-ADTRegistryKey
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Retrieves value names and value data for a specified registry key or optionally, a specific value.

## SYNTAX

### Path

```powershell
Get-ADTRegistryKey -Path <String> [-Name <String>] [-Wow6432Node] [-SID <SecurityIdentifier>]
 [-ReturnEmptyKeyIfExists] [-DoNotExpandEnvironmentNames] [<CommonParameters>]
```

### LiteralPath

```powershell
Get-ADTRegistryKey -LiteralPath <String> [-Name <String>] [-Wow6432Node] [-SID <SecurityIdentifier>]
 [-ReturnEmptyKeyIfExists] [-DoNotExpandEnvironmentNames] [<CommonParameters>]
```

## DESCRIPTION

Retrieves value names and value data for a specified registry key or optionally, a specific value.
If the registry key does not exist or contain any values, the function will return $null by default.

To test for existence of a registry key path, use built-in Test-Path cmdlet.

## EXAMPLES

### EXAMPLE 1

```powershell
Get-ADTRegistryKey -LiteralPath 'HKLM:SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\VLC media player'
```

This example retrieves all value names and data for the specified registry key.

### EXAMPLE 2

```powershell
Get-ADTRegistryKey -LiteralPath 'HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Image File Execution Options\iexplore.exe'
```

This example retrieves all value names and data for the specified registry key.

### EXAMPLE 3

```powershell
Get-ADTRegistryKey -LiteralPath 'HKLM:Software\Wow6432Node\Microsoft\Microsoft SQL Server Compact Edition\v3.5' -Name 'Version'
```

This example retrieves the 'Version' value data for the specified registry key.

### EXAMPLE 4

```powershell
Get-ADTRegistryKey -LiteralPath 'HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Session Manager\Environment' -Name 'Path' -DoNotExpandEnvironmentNames
```

This example retrieves the 'Path' value data without expanding environment variables.

### EXAMPLE 5

```powershell
Get-ADTRegistryKey -LiteralPath 'HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Example' -Name '(Default)'
```

This example retrieves the default value data for the specified registry key.

## PARAMETERS

### -Path

Path of the registry key, wildcards permitted.

```yaml
Type: String
Parameter Sets: Path
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### -LiteralPath

Literal path of the registry key.

```yaml
Type: String
Parameter Sets: LiteralPath
Aliases: Key

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Name

Value name to retrieve (optional).

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: [System.Management.Automation.Language.NullString]::Value
Accept pipeline input: False
Accept wildcard characters: False
```

### -Wow6432Node

Specify this switch to read the 32-bit registry (Wow6432Node) on 64-bit systems.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -SID

The security identifier (SID) for a user.
Specifying this parameter will convert a HKEY_CURRENT_USER registry key to the HKEY_USERS\$SID format.

Specify this parameter from the Invoke-ADTAllUsersRegistryAction function to read/edit HKCU registry settings for all users on the system.

```yaml
Type: SecurityIdentifier
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ReturnEmptyKeyIfExists

Return the registry key if it exists but it has no property/value pairs underneath it.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -DoNotExpandEnvironmentNames

Return unexpanded REG_EXPAND_SZ values.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### System.String

### Returns the value of the registry key or value.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2026 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Get-ADTRegistryKey](https://psappdeploytoolkit.com/docs/reference/functions/Get-ADTRegistryKey)
